[package]
name = "bevy_directx_mesh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Bevy extension for the legacy microsoft direct x mesh"
homepage = "https://github.com/scpcbredux/directx_mesh/"
documentation = "https://docs.rs/directx_mesh"
repository = "https://github.com/scpcbredux/directx_mesh/"
readme = "../README.md"

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = ["bevy_asset", "bevy_pbr", "bevy_render", "bevy_scene"] }
anyhow = "1.0.86"
directx_mesh = { path = "../directx_mesh", version = "0.1.0" }
